logs/Slang/generated/keywords/5.6.2--keyword_virtual.sv.log
name: virtual
description: The 'virtual' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_virtual.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_virtual.sv:8:8: error: expected declarator
    bit virtual;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_virtual.sv:8:9: error: language feature not yet supported
    bit virtual;
        ^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_virtual.sv:8:17: error: expected identifier
    bit virtual;
                ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_virtual.sv:9:1: error: expected member
endmodule
^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_virtual.sv:9:10: error: expected 'endclass'
endmodule
         ^
